--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "babel-node": "^0.0.1-security",
     "chai-http": "^4.3.0",
     "express": "^4.21.2"
   },
