--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -1,35 +1,12 @@
 {
-  "name": "node_js_basics",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "./node_modules/.bin/eslint",
-    "check-lint": "lint [0-9]*.js",
-    "test": "mocha --exit",
-    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js ./database.csv"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.27.1",
-    "@babel/preset-env": "^7.27.2",
-    "babel-node": "^0.0.1-security",
-    "chai-http": "^4.3.0",
-    "express": "^4.21.2"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "chai": "^4.5.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^22.21.0",
-    "lint": "*",
-    "mocha": "^6.2.3",
-    "nodemon": "^2.0.22",
-    "request": "^2.88.2",
-    "sinon": "^7.5.0"
+    "scripts": {
+      "test": "mocha ./*.test.js"
+    },
+    "dependencies": {
+      "mocha": "^11.7.5",
+      "sinon": "^21.0.0"
+    },
+    "devDependencies": {
+      "chai": "^6.2.1"
+    }
   }
-}
