--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -4,12 +4,13 @@
     "description": "Unit tests with Mocha",
     "main": "index.js",
     "scripts": {
-      "test": "./node_modules/mocha/bin/mocha"
+        "test": "./node_modules/mocha/bin/mocha"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "mocha": "^10.2.0"
+        "chai": "^6.2.1",
+        "mocha": "^10.2.0"
     }
-  }
+}
