--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -4,7 +4,7 @@
     "description": "Unit tests with Mocha",
     "main": "index.js",
     "scripts": {
-        "test": "./node_modules/mocha/bin/mocha"
+        "test": "mocha ./*.test.js"
     },
     "keywords": [],
     "author": "",
