--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "devDependencies": {
         "chai": "^6.2.1",
-        "mocha": "^10.2.0"
+        "mocha": "^10.2.0",
+        "sinon": "^21.0.0"
     }
 }
